<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp" android:orientation="vertical">

    <EditText android:id="@+id/username_input" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginTop="10dp"
        android:hint="@string/username_hint" android:inputType="textNoSuggestions"
        style="@style/input" android:background="@drawable/input">
    </EditText>

    <EditText android:id="@+id/password_input" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginTop="10dp"
        android:hint="@string/password_hint" android:inputType="textPassword"
        style="@style/input" android:background="@drawable/input">
    </EditText>

    <CheckBox android:id="@+id/show_password_input"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="10dp" android:text="@string/password_show" />

    <Button android:id="@+id/sign_in_button" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginTop="20dp"
        android:layout_gravity="center" android:text="@string/sign_in_action"
        android:background="@drawable/btn_primary" style="@style/btn_primary" />

</LinearLayout>
